--- a/package.json
+++ b/package.json
@@ -1,6 +1,14 @@
 {
   "dependencies": {
+    "chalk": "^2.4.1",
     "csv-parse": "^5.0.4",
-    "csv-parser": "^3.0.0"
+    "csv-parser": "^3.0.0",
+    "dateformat": "^5.0.2",
+    "express": "^4.17.2",
+    "readline": "^1.3.0",
+    "yargs": "^17.3.1"
+  },
+  "devDependencies": {
+    "@types/dateformat": "^5.0.0"
   }
 }
