--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dateformat": "^5.0.2",
     "express": "^4.17.2",
     "readline": "^1.3.0",
+    "validate-date": "^2.0.0",
     "yargs": "^17.3.1"
   },
   "devDependencies": {
