--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "dependencies": {
     "csv-parse": "^5.0.4",
-    "csv-parser": "^3.0.0"
+    "csv-parser": "^3.0.0",
+    "moment": "^2.29.1",
+    "readline": "^1.3.0"
   }
 }
