--- a/package.json
+++ b/package.json
@@ -4,15 +4,16 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-      "start": "node ./app.js"
+        "start": "node ./app.js"
     },
     "author": "",
     "license": "ISC",
-  
-  "dependencies": {
-    "csv-parse": "^5.0.4",
-    "csv-parser": "^3.0.0",
-    "date-fn": "^0.0.2",
-    "date-fns": "^2.28.0"
-  }
+    "dependencies": {
+        "csv-parse": "^5.0.4",
+        "csv-parser": "^3.0.0",
+        "date-fn": "^0.0.2",
+        "date-fns": "^2.28.0",
+        "dotenv": "^16.0.0",
+        "nodemon": "^2.0.15"
+    }
 }
