--- a/package.json
+++ b/package.json
@@ -4,9 +4,8 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "lint": "eslint src --ext js",
-        "dev": "nodemon src/app.js",
-        "start": "node ./app.js"
+        "dev": "nodemon ./src/app.js",
+        "start": "node ./src/app.js"
     },
     "author": "",
     "license": "ISC",
@@ -18,12 +17,6 @@
         "dotenv": "^16.0.0"
     },
     "devDependencies": {
-        "eslint": "^7.32.0",
-        "eslint-config-standard": "^16.0.3",
-        "eslint-plugin-import": "^2.25.4",
-        "eslint-plugin-node": "^11.1.0",
-        "eslint-plugin-prettier": "^4.0.0",
-        "eslint-plugin-promise": "^5.2.0",
         "nodemon": "^2.0.15",
         "prettier": "^2.5.1"
     }
