--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
     "description": "",
     "main": "index.js",
     "scripts": {
+        "lint": "eslint src --ext js",
         "dev": "nodemon ./src/app.js",
-        "start": "node ./src/app.js"
+        "start": "eslint src --ext js && node ./src/app.js"
     },
     "author": "",
     "license": "ISC",
@@ -18,6 +19,13 @@
     },
     "devDependencies": {
         "nodemon": "^2.0.15",
-        "prettier": "^2.5.1"
+        "eslint": "^7.25.0",
+        "eslint-config-airbnb": "^18.2.1",
+        "eslint-config-prettier": "^8.3.0",
+        "eslint-plugin-import": "^2.22.1",
+        "eslint-plugin-jsx-a11y": "^6.4.1",
+        "eslint-plugin-prettier": "^3.4.0",
+        "eslint-plugin-react": "^7.23.2",
+        "prettier": "^1.19.1"
     }
 }
