--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
     "main": "index.js",
     "scripts": {
         "lint": "eslint src --ext js",
-        "dev": "nodemon src/app.js",
-        "start": "node ./app.js"
+        "dev": "nodemon ./src/app.js",
+        "start": "eslint src --ext js && node ./src/app.js"
     },
     "author": "",
     "license": "ISC",
@@ -18,13 +18,14 @@
         "dotenv": "^16.0.0"
     },
     "devDependencies": {
-        "eslint": "^7.32.0",
-        "eslint-config-standard": "^16.0.3",
-        "eslint-plugin-import": "^2.25.4",
-        "eslint-plugin-node": "^11.1.0",
-        "eslint-plugin-prettier": "^4.0.0",
-        "eslint-plugin-promise": "^5.2.0",
         "nodemon": "^2.0.15",
-        "prettier": "^2.5.1"
+        "eslint": "^7.25.0",
+        "eslint-config-airbnb": "^18.2.1",
+        "eslint-config-prettier": "^8.3.0",
+        "eslint-plugin-import": "^2.22.1",
+        "eslint-plugin-jsx-a11y": "^6.4.1",
+        "eslint-plugin-prettier": "^3.4.0",
+        "eslint-plugin-react": "^7.23.2",
+        "prettier": "^1.19.1"
     }
 }
