--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,16 +1,10 @@
 {
-    "env": {
-        "browser": true,
-        "commonjs": true,
-        "es2021": true
-    },
-    "extends": [
-        "standard"
-    ],
-    "parserOptions": {
-        "ecmaVersion": 12
-    },
+    "extends": ["airbnb", "prettier"],
+    "plugins": ["prettier"],
     "rules": {
+      "prettier/prettier": ["error"]
     },
-    "plugins": ["prettier"]
-}
+    "env": {
+      "node": true
+    }
+  }
