--- a/package.json
+++ b/package.json
@@ -1,23 +1,31 @@
 {
-    "name": "pruebas",
-    "version": "1.0.0",
-    "description": "",
-    "main": "index.js",
-    "scripts": {
-        "dev": "nodemon ./src/app.js",
-        "start": "node ./src/app.js"
-    },
-    "author": "",
-    "license": "ISC",
-    "dependencies": {
-        "csv-parse": "^5.0.4",
-        "csv-parser": "^3.0.0",
-        "date-fn": "^0.0.2",
-        "date-fns": "^2.28.0",
-        "dotenv": "^16.0.0"
-    },
-    "devDependencies": {
-        "nodemon": "^2.0.15",
-        "prettier": "^2.5.1"
-    }
+  "name": "pruebas",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "dev": "nodemon ./src/app.js",
+    "start": "node ./src/app.js"
+  },
+  "author": "",
+  "license": "ISC",
+  "dependencies": {
+    "csv-parse": "^5.0.4",
+    "csv-parser": "^3.0.0",
+    "date-fn": "^0.0.2",
+    "date-fns": "^2.28.0",
+    "dotenv": "^16.0.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.15",
+    "prettier": "^2.5.1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/NisumCL/proyecto_calendario.git"
+  },
+  "bugs": {
+    "url": "https://github.com/NisumCL/proyecto_calendario/issues"
+  },
+  "homepage": "https://github.com/NisumCL/proyecto_calendario#readme"
 }
