--- a/package.json
+++ b/package.json
@@ -4,20 +4,24 @@
     "description": "",
     "main": "index.js",
     "scripts": {
+        "lint": "eslint src --ext js",
         "dev": "nodemon ./src/app.js",
-        "start": "node ./src/app.js"
+        "start": "eslint src --ext js && node ./src/app.js"
     },
     "author": "",
     "license": "ISC",
     "dependencies": {
-        "csv-parse": "^5.0.4",
-        "csv-parser": "^3.0.0",
-        "date-fn": "^0.0.2",
-        "date-fns": "^2.28.0",
         "dotenv": "^16.0.0"
     },
     "devDependencies": {
         "nodemon": "^2.0.15",
-        "prettier": "^2.5.1"
+        "eslint": "^7.25.0",
+        "eslint-config-airbnb": "^18.2.1",
+        "eslint-config-prettier": "^8.3.0",
+        "eslint-plugin-import": "^2.22.1",
+        "eslint-plugin-jsx-a11y": "^6.4.1",
+        "eslint-plugin-prettier": "^3.4.0",
+        "eslint-plugin-react": "^7.23.2",
+        "prettier": "^1.19.1"
     }
 }
