--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "dotenv": "^16.0.0",
     "enquirer": "^2.3.6",
     "ez-inputs": "^1.0.0",
+    "grasp": "^0.6.0",
     "inquirer": "^8.2.0",
     "ora": "^6.0.1",
     "terminal-kit": "^2.4.0",
