--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,7 +3,8 @@
   "plugins": ["prettier"],
   "rules": {
     "prettier/prettier": ["error"],
-    "indent": ["error", 2]
+    "indent": ["error", 2],
+    "no-console":"off"
   },
   "env": {
     "node": true
