--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
-        "dotenv": "^16.0.0"
+        "dotenv": "^16.0.0",
+        "express": "^4.17.3"
     },
     "devDependencies": {
         "nodemon": "^2.0.15",
