--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "body-parser": "^1.19.2",
         "dotenv": "^16.0.0",
-        "express": "^4.17.3"
+        "express": "^4.17.3",
+        "hbs": "^4.2.0"
     },
     "devDependencies": {
         "eslint": "^7.25.0",
