--- a/package.json
+++ b/package.json
@@ -11,15 +11,10 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
-<<<<<<< HEAD
         "body-parser": "^1.19.2",
         "dotenv": "^16.0.0",
         "express": "^4.17.3",
-        "hbs": "^4.2.0"
-=======
-        "dotenv": "^16.0.0",
-        "express": "^4.17.3"
->>>>>>> 3a996795d29a0f0fb5921fceaaffd9676f774c45
+        "hbs": "^4.2.0",
     },
     "devDependencies": {
         "eslint": "^7.25.0",
