--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "dependencies": {
         "dotenv": "^16.0.0",
         "express": "^4.17.3",
-        "hbs": "^4.0.1"
+        "hbs": "^4.0.1",
+        "request": "^2.88.0"
     },
     "devDependencies": {
         "eslint": "^7.25.0",
