--- a/package.json
+++ b/package.json
@@ -12,10 +12,10 @@
   "license": "ISC",
   "dependencies": {
     "dotenv": "^16.0.0",
-    "express": "^4.17.3"
+    "express": "^4.17.3",
+    "hbs": "^4.2.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.15",
     "eslint": "^7.25.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-prettier": "^8.3.0",
@@ -23,6 +23,7 @@
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-react": "^7.23.2",
+    "nodemon": "^2.0.15",
     "prettier": "^1.19.1"
   }
 }
