--- a/package.json
+++ b/package.json
@@ -11,15 +11,19 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "axios": "^0.26.1",
         "body-parser": "^1.19.2",
         "dotenv": "^16.0.0",
         "express": "^4.17.3",
+        "google-spreadsheet": "^3.2.0",
+        "googleapis": "^39.2.0",
         "hbs": "^4.2.0",
         "jquery": "^3.6.0",
         "mongo": "^0.1.0",
         "mongodb": "^4.4.1",
         "mongoimport": "^1.0.6",
-        "mongoose": "^6.2.5"
+        "mongoose": "^6.2.5",
+        "pug": "^3.0.2"
     },
     "devDependencies": {
         "eslint": "^7.25.0",
