--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "@sendgrid/mail": "^7.6.2",
         "axios": "^0.26.1",
         "body-parser": "^1.19.2",
         "dotenv": "^16.0.0",
@@ -23,6 +24,7 @@
         "mongodb": "^4.4.1",
         "mongoimport": "^1.0.6",
         "mongoose": "^6.2.5",
+        "nodemailer": "^6.7.2",
         "pug": "^3.0.2"
     },
     "devDependencies": {
